# amfi-ter-analysis

./: .gitignore  AUTOMATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FILE_REFERENCE.md  GITHUB_ACTIONS_CHECKLIST.md  GITHUB_ACTIONS_DEPLOYMENT.md  GITHUB_ACTIONS_GUIDE.md  GOOGLE_CHAT_CHANGES.md  GOOGLE_CHAT_INTEGRATION.md  GOOGLE_CHAT_QUICK_START.md  GOOGLE_CHAT_SETUP.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  README_GITHUB_ACTIONS.md  analysis_summary.json  create_comparison.py  deduplicate.py  generate_ter_comparison.py  install.bat  install.sh  notification_message.txt  pyproject.toml  setup.py  setup_automation.py  setup_github_actions.bat  setup_github_actions.ps1  setup_scheduler.bat  ter_analysis.py  ter_daily_automation.py  ter_github_actions.py  ter_state.json
.github/workflows/: amfi_ter_analysis.yml  notify_google_chat.yml  ter_analysis.yml  ter_comparison_daily.yml
amfi_ter_analysis/: __init__.py  ter_analysis.py  ter_daily_automation.py  ter_github_actions.py
history/: TER_Data_02-2026_20260211.pkl
output/: Direct_Plan_TER_Changes_2026-02-12.csv  Direct_vs_Regular_TER_Comparison.csv  Regular_Plan_TER_Changes.csv
