[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amfi-ter-analysis"
version = "1.0.0"
description = "Comprehensive AMFI TER (Total Expense Ratio) analysis tool with daily automation, GitHub Actions integration, and detailed reporting"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rachit Jain", email = "rachit.jain@example.com"}
]
keywords = ["amfi", "mutual-funds", "ter", "analysis", "automation", "github-actions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.7.0",
    "requests>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/Rachitjainca/amfi-ter-analysis"
Documentation = "https://github.com/Rachitjainca/amfi-ter-analysis#readme"
Repository = "https://github.com/Rachitjainca/amfi-ter-analysis.git"
Issues = "https://github.com/Rachitjainca/amfi-ter-analysis/issues"

[project.scripts]
amfi-ter-analysis = "amfi_ter_analysis.ter_github_actions:analyze_and_report"

[tool.setuptools]
packages = ["amfi_ter_analysis"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
